--- a/learn.org
+++ b/learn.org
@@ -269,61 +269,12 @@ run splash : sudo docker run -p 8050:8050 scrapinghub/splash
   </SauroSite>
 </Sauro>
 
-
-* TODO LEARN
-Lua: http://www.lua.org/pil/contents.html
-
-
-Sauropy  Sauropsida
-Eublepy  Eublepharis
-
-Sauro
-
-emergency
-Sauropsida
-Eublepharis
-Suereesayas
-
-http://pan.baidu.com/s/1qWn9cSW
-https://www.quora.com/Is-there-a-better-crawler-than-Scrapy
-
-
-
-
-http://www.oschina.net/question/269120_133286
-http://blog.csdn.net/u012150179/article/details/34913315
-  not used http://www.2cto.com/os/201406/311992.html
-
-http://blog.csdn.net/column/details/younghz-scrapy.html many oked
-http://blog.csdn.net/zzllabcd/article/details/21380267 easy example for webkit javascript
-
-
-http://www.v2ex.com/t/135633
-
-
-
-http://www.w3.org/TR/xpath-functions/ w3c xpath
-http://stackoverflow.com/questions/11744465/xpath-difference-between-node-and-text node() text()
-http://stackoverflow.com/questions/14076399/downloader-middleware-to-ignore-all-requests-to-a-certain-url-in-scrapy create downloadmiddleware
-http://dh.obdurodon.org/functions.html xpath function
-
-http://blog.csdn.net/heiyeshuwu/article/details/42170017 scrapy + webkit
-http://www.jb51.net/article/34156.htm void() href='#'
-http://blog.chedushi.com/archives/6488 not ban
-
-
-http://stock.sohu.com/20150907/n420528997.shtml
-http://blog.163.com/yaoyingying681@126/blog/static/109463675201191210280802/ string in python
-
-
-http://blog.csdn.net/arbel/article/details/7795504 some adv for scrapy, 'SgmlLinkExtractor'
-
-http://my.oschina.net/lpe234/blog/342741 adv scarpy should read
 http://blog.csdn.net/iloveyin/article/details/21468641 add more para in python
 def parse(self,response):
     yield Request(url, callback=lambda response, typeid=5: self.parse_type(response,typeid))
 
 http://blog.csdn.net/tianmohust/article/details/7621424 dict in python ! very good !
+assign   d = dict(zip(['name', 'age'], ['visaya', 20])) 
 
 http://www.jb51.net/article/41972.htm except in python
 http://www.jb51.net/article/55734.htm  __xxx__ method in python  __slots__ save many memory for huge number of class
@@ -371,203 +322,139 @@ the most crazy is how to include1 & 5
 
 
 
-* TEST RESULT
+* TODO MySQL in ubuntu
+** install 
+sudo apt-get install mysql-server
+** config file , not changed
+http://blog.chinaunix.net/uid-223060-id-2127099.html
+/etc/mysql/my.cnf
+/etc/init.d/mysql
+** stop engine
+sudo stop mysql | sudo /etc/init.d/mysql stop | sudo service mysql stop
+** cp file
+sudo su; cd /var/lib/mysql
+** for remote access
+http://www.cnblogs.com/easyzikai/archive/2012/06/17/2552357.html
+change /etc/mysql/my.cnf listen
+** useful command
+$mysql -u user -h host -p
+>use mysql
+>SELECT User, Password, Host FROM user;
+>GRANT ALL PRIVILEGES ON *.* TO 'root'@'192.168.206.138' IDENTIFIED BY '' WITH GRANT OPTION;
+>flush privileges;
 
-const.HOST = 'http://stock.sohu.com/'
-const.ALLOW = 'stock.sohu.com
-<div itemprop="articleBody"> 256
-
-const.HOST = 'http://finance.sina.com.cn/stock/'
-const.ALLOW = 'finance.sina.com.cn'
-<div class="article article_16" id="artibody"> 880
-
-const.HOST = 'http://www.stockstar.com/'
-const.ALLOW = 'stock.stockstar.com'
-<div class="article" id="container-article"> 359
-
-const.HOST = 'http://www.sac.net.cn/'
-const.ALLOW = 'www.sac.net.cn'
-<div class="Custom_UnionStyle"> 48    
-
-const.HOST = 'http://www.szse.cn/'
-const.ALLOW = 'szse.cn
-<div class="news_zw"> 16
-
-const.HOST = 'http://money.163.com/stock/'
-const.ALLOW = 'money.163.com
-<div id="endText" class="end-text"> 949
-
-const.HOST = 'http://finance.people.com.cn/'
-const.ALLOW = 'finance.people.com.cn'
-<div id="p_content" class="clearfix"> 476
-
-const.HOST = 'http://caijing.chinadaily.com.cn/'
-const.ALLOW = 'caijing.chinadaily.com.cn'
-<div class="arcBox" id="Zoom"> 303
-
-const.HOST = 'http://finance.ifeng.com/'
-const.ALLOW = 'finance.ifeng.com'
-<div id="main_content" class="js_selection_area"> 763
+** install MySQL-python
+http://www.cnblogs.com/fnng/p/3565912.html
+http://blog.sina.com.cn/s/blog_5357c0af010117nf.html
+apt-get install python-dev
+python setup.py build python setup.py install
+** install mysql-workbench
+apt-get it, cool
 
 
+CREATE TABLE `quotes_gbk`.`stock_quotation` (
+  `line_number` INT NOT NULL AUTO_INCREMENT,
+  `stock_id` VARCHAR(32) NOT NULL,
+  `stock_price` FLOAT NULL DEFAULT 0,
+  `stock_totalamount` INT NULL DEFAULT 0,
+  `stock_todayamount` INT NULL DEFAULT 0,
+  `update_time` DATETIME NOT NULL,
+  PRIMARY KEY (`line_number`));
 
-sse.com.cn NOT GOOD
-
-
-        for onesign in response.xpath('//div[@*] | //table[@*] | //form[@*] | //script[@*] | //style[@*]').extract():
-            thisname = onesign[1:2]
-            if lastname == thisname:
-                lastnum += 1
-            else:
-                if lastnum != 0:
-                    totalname += lastname
-                    totalname += str(lastnum)
-                    lastnum = 0
-                lastname = thisname
-        print totalname
-s6d3s4d1d12d1d46d149d53d8d8d20d8d8d7d9d8d8d8d12d8d11d3d17d6d1d1d3d1d1d4d3s1d69d15d46s3d5
-
-0s6d0s0d3s4d1s0d12f0d0s0d1s0d46s0d149s0d53t0d0t0d8t0d8t0d20t0d8t0d8t0d7s0d9t0d8t0d8t0d8t0d12t0d8t0d11s0d3f0d17t0d0t0d6t0d1t0d1t0d3t0d1t0d1t0d4t0s0d3s1d69s0d15t0d46s3d5
-
-
-Ms9ds1ds3d2tds1d1s1d12   s2d7sd2td9  s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  d7sd61      tdsd18sdsd4s3d2s12ds 8
-Ms9ds1ds3d2tds1d1s1d12   s2d7sd2td5  s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  d7sd61      tdsd18sdsd4s3d2s12ds 17
-Ms9ds1ds3d2tds1d1s1d13   sd18        s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  ds1d10s1d2  tdsd18sdsd4s3d2s12ds 4
-Ms9ds1ds3d2tds1d1s1d13   sd18        s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  d7sd61      tdsd18sdsd4s3d2s12ds 24
-Ms9ds1ds3d2tds1d1s1d13   sd15        s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  d7sd61      tdsd18sdsd4s3d2s12ds 10
-Ms9ds1ds3d2tds1d1s1d13   sd8sd4      s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  d7sd61      tdsd18sdsd4s3d2s12ds 2
-Ms9ds1ds3d2tds1d1s1d13   sd13        s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  ds1d10s1d2  tdsd18sdsd4s3d2s12ds 32
-Ms9ds1ds3d2tds1d1s1d13   sd9td4      s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  d7sd61      tdsd18sdsd4s3d2s12ds 20
-Ms9ds1ds3d2tds1d1s1d13   sd14        s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  ds1d10s1d2  tdsd18sdsd4s3d2s12ds 13
-Ms9ds1ds3d2tds1d1s1d13   sd10sd4     s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  d7sd61      tdsd18sdsd4s3d2s12ds 8
-Ms9ds1ds3d2tds1d1s1d13   sd10td4     s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  d7sd61      tdsd18sdsd4s3d2s12ds 8
-Ms8ds1ds3d2tds1d1s1d13   sd9tdtd5    s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  ds1d10s1d2  tdsd18sdsd4s3d2s12ds 9
-Ms9ds1ds3d2tds1d1s1d13   sd9td6      s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  d7sd61     z tdsd18sdsd4s3d2s12ds 4
-Ms9ds1ds3d2tds1d1s1d13   sd15        s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  ds1d10s1d2  tdsd18sdsd4s3d2s12ds 11
-Ms9ds1ds3d2tds1d1s1d13   sd17        s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  ds1d10s1d2  tdsd18sdsd4s3d2s12ds 69
-Ms9ds1ds3d2tds1d1s1d13   sd12sd4     s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2s  ds1d10s1d2  tdsd18sdsd4s3d2s12ds 7
-Ms9ds1ds3d2tds1d1s1d13   sd17        s2d1sd1s10ds2d9s1d2fds1dtds2d2tds1d2sds1d10s1d2  tdsd18sdsd4s3d2s12ds 6
-Ms9ds1ds3d2tds1d1s1d13   sd13        s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61  tdsd18sdsd4s3d2s12ds 9
-
-<div itemprop="articleBody"> 261
-Ms9ds1ds3d2tds1d1s1d12s2d7sd2td9s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 8
-Ms9ds1ds3d2tds1d1s1d12s2d7sd2td5s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 17
-Ms9ds1ds3d2tds1d1s1d13sd18s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sds1d10s1d2tdsd18sdsd4s3d2s12ds 4
-Ms9ds1ds3d2tds1d1s1d13sd18s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 24
-Ms9ds1ds3d2tds1d1s1d13sd15s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 10
-Ms9ds1ds3d2tds1d1s1d13sd8sd4s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 2
-Ms9ds1ds3d2tds1d1s1d13sd13s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sds1d10s1d2tdsd18sdsd4s3d2s12ds 32
-Ms9ds1ds3d2tds1d1s1d13sd9td4s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 20
-Ms9ds1ds3d2tds1d1s1d13sd14s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sds1d10s1d2tdsd18sdsd4s3d2s12ds 13
-Ms9ds1ds3d2tds1d1s1d13sd10sd4s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 8
-Ms9ds1ds3d2tds1d1s1d13sd10td4s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 8
-Ms8ds1ds3d2tds1d1s1d13sd9tdtd5s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sds1d10s1d2tdsd18sdsd4s3d2s12ds 9
-Ms9ds1ds3d2tds1d1s1d13sd9td6s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 4
-Ms9ds1ds3d2tds1d1s1d13sd15s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sds1d10s1d2tdsd18sdsd4s3d2s12ds 11
-Ms9ds1ds3d2tds1d1s1d13sd17s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sds1d10s1d2tdsd18sdsd4s3d2s12ds 69
-Ms9ds1ds3d2tds1d1s1d13sd12sd4s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sds1d10s1d2tdsd18sdsd4s3d2s12ds 7
-Ms9ds1ds3d2tds1d1s1d13sd17s2d1sd1s10ds2d9s1d2fds1dtds2d2tds1d2sds1d10s1d2tdsd18sdsd4s3d2s12ds 6
-Ms9ds1ds3d2tds1d1s1d13sd13s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 9
-<div class="lefttext"> 61
-Ms1d2fd8tdtd2tdtd2tdtd5tdtdtd7t1d2td3td18sd2td14t2d4td10td1td19sd2td19td2td2td1t1sd3tdtd1s7 27
-Ms1d2fd8tdtd2tdtd2tdtd5tdtdtd7t1d2td22sd2td14t2d4td10td1td19sd2td19td2td2td1t1sd3tdtd1s7 2
-Ms1d2fd8tdtd2tdtd2tdtd5tdtdtd7t1d2td3td18sd2td14t2d4td10td1td19sd2td19td2td6tdtsd3tdtd1s7 27
-Ms1d2fd8tdtd2tdtd2tdtd5tdtdtd7t1d2td3td18sd2td14t2d4td10td1td19sd2td19td2td6tdtsd4s7 3
-Ms1d2fd8tdtd2tdtd2tdtd5tdtdtd7t1d2td3td18sd2td14t2d4td10td1td19sd2td19td2td2td1t1sd4s7 2
-<div class="text clear" id="contentText"> 26
-Ms6ds1ds3d2tds1d1s1d22s4ds3ds2d7s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s5d2s12ds 26
-<div class="leftcon"> 19
-Ms1d32sd86sdsds3 5
-Ms2d14tdtd23s1d91sdsds3 14
-<div align="left"> 11
-Ms9ds1ds3d2tds1d1s1d13sd36s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 11
-<div class="txt"> 8
-Ms5d19s2d8sd23sd1s2d3s1dsd5sds4d4s1d3sds1ds4ds 2
-Ms5d19s2d8sd21sds2d3s1dsd5sds4d4s1d3sds1ds4ds 6
-<div class="righttext"> 2
-Ms4d1sd11sd1sd4sd8sd1s3 1
-Ms3d1sd11sd1sd4sd8sd1s3 1
-<div class="text-pic"> 1
-Ms9ds1ds3d2tds1d1s1d13sd10td4s2d3sd1s10ds2d10s1d2fds1dtds2d2tds1d2sd7sd61tdsd18sdsd4s3d2s12ds 1
-<div class="commtext"> 1
-Msd36sds3 1
-<div class="con-l1"> 1
-Ms3d10s2d17sd3s3 1
-raymon@ubuntu:~/security/Sauro$ 
-
-
-java callback
-http://blog.csdn.net/allen_zhao_2012/article/details/8056665
-
-
-
-!!! <div> 1 http://stock.sohu.com/20150914/n421044804.shtml ????? <div> order is different
-<div class=\"rc\"> 1  http://stock.sohu.com/s2014/guirenniao/ Intro for CEO
-!! <div class=\"righttext\"> 1 http://stock.sohu.com/s2013/caijin28/ subject
-<div id=\"ozoom\" style=\"ZOOM: 100%\"> 1 http://stock.sohu.com/20081021/n260145271.shtml news for 2008
-<div style=\"text-align: left;\" align=\"center\"> 1 http://stock.sohu.com/20110811/n316091636.shtml news for 2011
-<div class=\"cont\"> 1 http://stock.sohu.com/s2011/adc/index.shtml subject
-<div style=\"TEXT-JUSTIFY: inter-ideograph; TEXT-ALIGN: left\"> 1 http://stock.sohu.com/20120208/n334078864.shtml maybe ok
-<div class=\"pictext\" id=\"picText\"> 1 http://pic.stock.sohu.com/group-381653.shtml pic and text
-<div class=\"cut0 Area\"> 1 http://stock.sohu.com/s2009/stock/ s_subject not use
-!!! <div class=\"text-pic\"> 1 http://stock.sohu.com/20150915/n421181505.shtml spec format
-<div class=\"about\"> 2 http://stock.sohu.com/s2012/aibisen/ subject
-<div class=\"box\"> 2 http://q.stock.sohu.com/mac/macdata.shtml macro
-NoDiv 2 http://q.stock.sohu.com/cn,gg,300437,2062856328.shtml sohu error
-<div class=\"text1 area\" style=\"padding-top:110px\"> 3 http://stock.sohu.com/s2013/xiaogangshinian/ pic and text
-<div class=\"mod01\"> 3 http://stock.sohu.com/s2012/haofengchuangyuan/ subject
-<div class=\"content clear\" id=\"contentText\"> 5 http://stock.sohu.com/20090623/n264718719.shtml news for 2009
-<div align=\"center\"> 6 http://q.stock.sohu.com/news/cn/919/601919/4497377.shtml maybe ok
-<div style=\"MARGIN: 0px auto; WIDTH: 950px\" class=\"text1 area\"> 7 http://stock.sohu.com/s2013/shouru/ pic and text
-<div class=\"content_text\"> 12 http://stock.sohu.com/s2013/iporeform/ subject
-!! <div class=\"leftcon\"> 28 http://stock.sohu.com/s2014/6530/s396618558/ http://stock.sohu.com/s2014/6530/s395940153/ subject
-<div class=\"txt\"> 29 http://pic.stock.sohu.com/group-495195.shtml pic and text
-<div id=\"content\"> 37 http://stock.sohu.com/s2013/iporeform/ subject
-<div class=\"BIZ_itemA_content\"> 47 http://q.stock.sohu.com/cn/002500/jyqk.shtml business
-----------------------------------------------------------------------------------------------------
-<div align=\"left\"> 76 http://stock.sohu.com/20150922/n421857557.shtml maybe ok
-<div id=\"sohu_content\" class=\"article\"> 135 http://stock.sohu.com/20081105/n260446186.shtml news for 2008
-<div class=\"text clear\" id=\"contentText\"> 274 http://stock.sohu.com/20120604/n344725212.shtml news for 2012
-<div class=\"text clear\" id=\"contentText\" collection=\"Y\"> 358 http://stock.sohu.com/20111027/n323640673.shtml news for 2011
-----------------------------------------------------------------------------------------------------
-<div class=\"news_content\"> 668 http://q.stock.sohu.com/news/cn/500/002500/4345153.shtml bulletin
-<div class=\"BIZ_itemB_content\"> 703 http://q.stock.sohu.com/cn/300480/yjyg.shtml bulletin
-<div itemprop=\"articleBody\"> 1476
-<div class=\"news_content content\"> 2963
-<div class=\"part\"> 8380 http://q.stock.sohu.com/cn,gg,601318,2065884227.shtml bulletin
-
-{
-u'<div itemprop="articleBody">': [u'ds1ds3d2tds1d1s1d1', u'sd1s10ds2d', u's1d2fds1dtds2d2tds1d2sd', u'tdsd18sdsd4s3d2s12dsM'], u'<div class="txt">': [u'Ms5d19s2d8sd2', u's2d3s1dsd5sds4d4s1d3sds1ds4dsM'], 
-u'<div class="news_content content">': [u'Msd3fd8tdtd2tdtd2tdtd4tdtdtd6t', u'd2td3td1'], 
-u'<div class="BIZ_itemB_content">': [u'Ms6d3sd2sd3fd6t1d'], 
-u'<div class="text clear" id="contentText">': [u'Ms6ds1ds3d2tds1d1s1d',                                                                 u's4ds3ds2d7s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s5d2s12dsM'], 
-u'<div class="part">': [u'Ms6d3sd2sd3fd']}
-
-
-{u'<div itemprop="articleBody">': [u'ds1ds3d2tds1d1s1d1', u's1d2fds1dtds2d2tds1d2sd', u'tdsd18sdsd4s3d2s12dsM'], u'<div class="BIZ_itemB_content">': [u'Ms6d3sd2sd3fd6t1d'], u'<div class="txt">': [u's2d3s1dsd5sds4d4s1d3sds1ds4dsM'], u'<div class="news_content content">': [u'Msd3fd8tdtd2tdtd2tdtd4tdtdtd6t'], u'<div class="text clear" id="contentText">': [u'Ms6ds1ds3d2tds1d1s1d', u's4ds3ds2d7s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s5d2s12dsM']}
-PART match <div itemprop="articleBody"> Ms6ds1ds3d2tds1d1s1d16sdtd4s4ds3ds2d7s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s5d2s12dsM tdsd18sdsd4s3d2s12dsM
-PART match <div itemprop="articleBody"> Ms6ds1ds3d2tds1d1s1d17td6s4ds3ds2d7s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s5d2s12dsM tdsd18sdsd4s3d2s12dsM
-PART match <div itemprop="articleBody"> Ms6ds1ds3d2tds1d1s1d16td4s4ds3ds2d7s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s5d2s12dsM tdsd18sdsd4s3d2s12dsM
-PART match <div itemprop="articleBody"> Ms6ds1ds3d2tds1d1s1d26s4ds3ds2d6s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s3d2s12dsM tdsd18sdsd4s3d2s12dsM
-PART match <div itemprop="articleBody"> Ms9ds1ds3d2tds1d1s1d12s2d7sd2tdtdtdtdtd6s2d2sd1s10ds2d10s1d2fds1dtds2d28tds1d2sd7sd61tdsd18sdsd4s3d2s12dsM tdsd18sdsd4s3d2s12dsM
-PART match <div class="text clear" id="contentText"> Ms6ds1ds3d2tds1d1s1d21s5ds3ds2d7s1d2fds1dtds2d28tds1d2sd7sd61tdsd18sdsd4s5d2s12dsM s4ds3ds2d7s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s5d2s12dsM
-PART match <div class="text clear" id="contentText"> Ms6ds1ds3d2tds1d1s1d26s4ds3ds2d6s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s3d2s12dsM s4ds3ds2d7s1d2fds1dtds2d28tds1d2sd5sd20sd61tdsd18sdsd4s5d2s12dsM
-
-
-@2.获取文件夹大小，即遍历文件夹，将所有文件大小加和。遍历文件夹使用os.walk函数
-import os  
-from os.path import join, getsize  
+CREATE TABLE `quotes_gbk`.`stock_detail` (
+  `line_number` INT NOT NULL AUTO_INCREMENT,
+  `stock_id` VARCHAR(32) NOT NULL,
+  `stock_number` VARCHAR(32) NOT NULL,
+  `stock_name` VARCHAR(32) NULL,
+  `stock_fullname` VARCHAR(128) NULL,
+  `stock_website` VARCHAR(256) NULL,
+  `stock_opendate` DATETIME NULL,
+  `stock_infourl` VARCHAR(256) NOT NULL,
+  `update_time` DATETIME NOT NULL,
+  PRIMARY KEY (`line_number`));
   
-def getdirsize(dir):  
-   size = 0L  
-   for root, dirs, files in os.walk(dir):  
-      size += sum([getsize(join(root, name)) for name in files])  
-   return size 
-   
-   
-   
-   
-   
-   
+** timing doing
+http://www.cnblogs.com/justinzhang/p/4500409.html
 
-http://ergoemacs.org/emacs/emacs_copy_cut_current_line.html config emacs
+** data, datatime, string
+http://my.oschina.net/u/1032854/blog/198179
+
+* ansj
+https://github.com/NLPchina/ansj_seg
+http://nlpchina.github.io/ansj_seg/ download ansj jar
+http://www.douban.com/note/311967659/?type=like use
+http://www.blogchong.com/post/78.html use java
+http://www.ipexe.com/open-source/9872.html source desc
+http://www.mamicode.com/info-detail-372798.html
+http://www.hankcs.com/nlp/ansj-word-pairs-array-tire-tree-achieved-with-arrays-dic-dictionary-format.html tired tree
+http://www.mincoder.com/article/3769.shtml userdefine
+http://www.doc88.com/p-0314730361272.html 
+http://lies-joker.iteye.com/blog/2173086 IKanalyzer,ansj_seg,jcseg
+http://yucang52555.iteye.com/blog/2164829 custum dict in ansj
+
+http://soshow.com/s/?wd=%E5%81%9C%E7%94%A8%E8%AF%8D+ansj&ie=utf-8&rsv_crq=7&bs=%E5%93%88%E5%B7%A5%E5%A4%A7%E4%B8%AD%E6%96%87%E5%81%9C%E7%94%A8%E8%AF%8D%E8%A1%A8%E6%89%A9%E5%B1%95 nice search
+http://www.zhihu.com/topic/19591482 zhihu
+http://bosonnlp.com/dev/resource boson
+http://www.hankcs.com/nlp/ansj-word-pairs-array-tire-tree-achieved-with-arrays-dic-dictionary-format.html dict format
+
+http://simple-is-better.com/news/319 cc-cedict
+http://wenku.baidu.com/link?url=v6SaMIqGkj8vi_qdpb-TcC7MsPl7waNN8kzgZy1z6VYkFMZ2_Jff2M_L1W_4W0I6QttCZzmD9OtWAfqVmVu0FlNpzTYSPJat9hjBUOKiR5m for baidu and google
+http://blog.csdn.net/chs_jdmdr/article/details/7359773 in lucene
+http://my.oschina.net/apdplat/blog/412921 cmp 11
+http://my.oschina.net/apdplat/blog/228615 cmp
+http://www.open-open.com/lib/view/open1420814197171.html gainian
+http://www.oschina.net/p/cws_evaluation/similar_projects?lang=341&sort=time cws
+
+http://m.blog.csdn.net/blog/huyoo/12188573 nltk python
+http://blog.csdn.net/rav009/article/details/12196623    python jieba
+http://www.cnblogs.com/chinafine/archive/2010/09/02/1815980.html web.xml nice
+http://www.cnblogs.com/xdp-gacl/p/3798347.html get value in java
+
+http://www.greenxf.com/soft/61383.html ciku
+
+keywords
+https://raw.githubusercontent.com/observerss/textfilter/master/keywords
+http://txdl.cn/baidu/ test online
+
+http://freeebayimagehost.com/
+http://fanhexie.googlecode.com/files/
+http://www.cnblogs.com/taoweiji/archive/2012/12/11/2812852.html
+
+** java openssl
+http://stackoverflow.com/questions/5416194/openssl-with-java
+javax.crypto http://docs.oracle.com/javase/1.5.0/docs/api/
+bouncycastle  http://www.bouncycastle.org/
+java use http://blog.csdn.net/chaijunkun/article/details/7275632/  http://blog.csdn.net/sunguangran/article/details/6742463
+openssl cmd http://www.cnblogs.com/yangy608/archive/2012/11/16/2773206.html
+
+** mangoDB
+http://www.cnblogs.com/ymind/archive/2012/04/25/2470551.html use mango
+** mysql
+http://blog.sina.com.cn/s/blog_52d20fbf0100ofd5.html store procedure
+http://wallimn.iteye.com/blog/2059128 mongo in java
+http://www.cs.jhu.edu/~nikhil/proc_examples.txt store procedure sample
+http://www.cnblogs.com/discuss/articles/1862248.html code-page utf-8 use
+http://blog.csdn.net/miraclestar/article/details/6525236 insert or update -> replace
+http://blog.chinaunix.net/uid-20639775-id-3180980.html all timeout
+http://blog.163.com/yutao_10/blog/static/120190049201031553545232/ wait timeout mysql_ping
+max_allowed_packet | 1048576 | largest sql sentence
+
+** java 
+http://uujava0322.iteye.com/blog/1045876 java file
+http://blog.sina.com.cn/s/blog_6047c8870100qftt.html java char byte
+http://www.blogjava.net/Steven-bot/articles/361974.html java path
+* walk
+** Oct. 31 '15
+38km 10:00-17:35 455
+车道沟-白石桥-甘家口-阜成门-故宫-朝阳门-呼家楼-郑家窑桥-通州北关桥-新惠桥-通州北关地铁站
+** Nov. 7 '15
+17km 11:30-14:50 185
+车道沟-西钓鱼台-南如意门-车道沟
+** Nov. 8 '15
+19km + 7km + 2km 10:30-16:15 325
+车道沟-杏石口路-西山东门-鬼笑石-西山南门-车道沟
+
+* emacs
+https://ignaciopp.wordpress.com/2009/06/17/emacs-indentunindent-region-as-a-block-using-the-tab-key/ key tab
+* bookmark
+** http://www.daimg.com/font/chinese/list_84_18.html font chinese font
